// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsonExt JsonExt#flatten  1`] = `
Object {
  "a": "[]",
  "b": null,
  "c.0": 1,
  "c.1": 3,
  "c.2.a": "io",
}
`;

exports[`JsonExt JsonExt#flatten isAtomValue  1`] = `
Object {
  "a": "[]",
  "b": null,
  "c": Array [
    1,
    3,
    Object {
      "a": "io",
    },
  ],
  "d.k": 123,
}
`;
